静态页面完成

--- a/index.html
+++ b/index.html
@@ -63,17 +63,67 @@
             	</dl>
             </div>
             <div class = "mainbody_bottom">
-				<div class = "bottom_top">
-                	<div class = "bottom_left">
+				<div class = "selectcourse">
+                	<div class = "leftbottom">
                         <span class = "new">最新</span>
                         <span class = "hot">最热</span>
                     </div>
-                    <div class = "bottom_right">
+                    <div class = "rightbottom">
                         <input type = "checkbox" value = "" id = "selection">
                         <span class = "text">隐藏已参加课程</span>
                         <span class = "numberOfPages">1/1</span>
                         <img src = "image/left.png" alt = "" id = "left"/>
                         <img src = "image/right.png" alt = "" id = "right"/>
+                    </div>
+                </div>
+                <div class = "courses">
+                	<div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                    <div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                    <div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                    <div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                	<div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                    <div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                    <div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    </div>
+                    <div class = "course">
+                    	<img src = "image/class.png" alt = "" id = "course"/>
+                        <p class = "coursename">从psd到html</p>
+                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
                     </div>
                 </div>
             </div>
@@ -91,7 +141,7 @@
                     <li>意见反馈</li>
                     <li>友情链接</li>
                 </ul>
-                <p>Copyright&copy;2016&nbsp;imooc.com&nbsp;All&nbsp;Rights&nbsp;Reserved|京ICP备&nbsp;13046642号-2</p>
+                <p class = "copyright">Copyright&copy;2016&nbsp;imooc.com&nbsp;All&nbsp;Rights&nbsp;Reserved|京ICP备&nbsp;13046642号-2</p>
             </div>
             <div class = "bottom_right">
                 <ul class = "icons2">
