进一步完善页面

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<title>HTML/CSS视频教程_html/css基础教程-慕课网</title>
         <meta charset = "utf-8">
         <link href = "index.css" type = "text/css" rel = "stylesheet">
+        <link rel = "Shortcut Icon" href = "image/titleIcon.ico" type = "image/x-icon">
         <script src = "index.js"></script>
     </head>
     <body>
@@ -78,52 +79,46 @@
                 </div>
                 <div class = "courses">
                 	<div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
+                    	<img src = "image/class.png" alt = "" id = "class1"/>
                         <p class = "coursename">从psd到html</p>
                         <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
                         <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
                     </div>
                     <div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    	<img src = "image/class2.png" alt = "" id = "class2"/>
+                        <p class = "coursename">SEO在网页制作中的应用</p>
+                        <p class = "courseDescription">让您快速迈进SEO的门，不容错过！</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;55433人学习</p>
                     </div>
                     <div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    	<img src = "image/class3.png" alt = "" id = "class3"/>
+                        <p class = "coursename">HTML+CSS基础课程</p>
+                        <p class = "courseDescription">8小时带领大家步步深入学习标签的基础知...</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;431543人学习</p>
                     </div>
                     <div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    	<img src = "image/class4.png" alt = "" id = "class4"/>
+                        <p class = "coursename">网页布局基础</p>
+                        <p class = "courseDescription">让你精通CSS中三大定位机制</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;124762人学习</p>
                     </div>
                 	<div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
+                    	<img src = "image/class5.png" alt = "" id = "class5"/>
+                        <p class = "coursename">impress让你的内容“舞”起来</p>
+                        <p class = "courseDescription">骚年！来试试impress吧！</p>
                         <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
                     </div>
                     <div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    	<img src = "image/class6.png" alt = "" id = "class6"/>
+                        <p class = "coursename">IT菜鸟逆袭指南（江湖篇）</p>
+                        <p class = "courseDescription">屌爆了！码农逆袭有秘诀，看“挨踢（IT）”</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;55064人学习</p>
                     </div>
                     <div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
-                    </div>
-                    <div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "course"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
+                    	<img src = "image/class7.png" alt = "" id = "class7"/>
+                        <p class = "coursename">帝堵抢车位动画制作</p>
+                        <p class = "courseDescription">带领大家做一个抢车动画效果。</p>
+                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;21819人学习</p>
                     </div>
                 </div>
             </div>
@@ -145,10 +140,10 @@
             </div>
             <div class = "bottom_right">
                 <ul class = "icons2">
-            	<li><img src = "image/wechat.png" alt = "wechat" id = "wechat"/></li>
-                <li><img src = "image/weibo.png" alt = "weibo" id = "weibo"/></li>
-                <li><img src = "image/qq.png" alt = "qq" id = "qq"/></li>
-            </ul>
+                    <li><img src = "image/wechat.png" alt = "wechat" id = "wechat"/></li>
+                    <li><img src = "image/weibo.png" alt = "weibo" id = "weibo"/></li>
+                    <li><img src = "image/qq.png" alt = "qq" id = "qq"/></li>
+            	</ul>
             </div>
         </footer>
     </body>
