--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset = "utf-8">
         <link href = "index.css" type = "text/css" rel = "stylesheet">
         <link rel = "Shortcut Icon" href = "image/titleIcon.ico" type = "image/x-icon">
-        <script src = "index.js"></script>
+    	<script src = "index.js"></script>
     </head>
     <body>
     	<header>
@@ -18,11 +18,16 @@
                 <li>手记</li>
             </ul>
              <ul class = "icons">
-            	<li><img src = "image/scale.png" alt = "放大镜" id = "scale"/></li>
-                <li><img src = "image/smartphone.png" alt = "手机" id = "smartphone"/></li>
-                <li><img src = "image/bell.png" alt = "铃" id = "bell"/></li>
-                <li><img src = "image/letter.png" alt = "信" id = "letter"/></li>
-                <li><img src = "image/happyIcon.png" alt = "用户头像" id = "happyIcon"/></li>
+            	<li class = "scale">
+                	<img src = "image/scale.png" alt = "放大镜" id = "scale"/>
+                </li>
+                <li class = "phone">
+                	<img src = "image/smartphone.png" alt = "手机" id = "smartphone"/>
+                    <img src = "image/downloadlink.png" alt = "手机" id = "downloadlink"/>
+                </li>
+                <li class = "bell"><img src = "image/bell.png" alt = "铃" id = "bell"/></li>
+                <li class = "letter"><img src = "image/letter.png" alt = "信" id = "letter"/></li>
+                <li class = "happyIcon"><img src = "image/happyIcon.png" alt = "用户头像" id = "happyIcon"/></li>
             </ul>
         </header>
         <div id = "mainbody">
@@ -140,7 +145,10 @@
             </div>
             <div class = "bottom_right">
                 <ul class = "icons2">
-                    <li><img src = "image/wechat.png" alt = "wechat" id = "wechat"/></li>
+                    <li class = "weixin">
+                    	<img src = "image/wechat.png" alt = "wechat" id = "wechat"/>
+                        <img src = "image/bottomlink.png" alt = "" id = "bottomlink"/>
+                    </li>
                     <li><img src = "image/weibo.png" alt = "weibo" id = "weibo"/></li>
                     <li><img src = "image/qq.png" alt = "qq" id = "qq"/></li>
             	</ul>
