--- a/index.html
+++ b/index.html
@@ -155,5 +155,12 @@
             	</ul>
             </div>
         </footer>
+        <aside>
+            <ul>
+                <li><img src = "image/aside1.png" alt = "" id = "aside1"/></li>
+                <li><img src = "image/aside2.png" alt = "" id = "aside2"/></li>
+                <li><img src = "image/aside3.png" alt = "" id = "aside3"/></li>
+            </ul>
+        </aside>
     </body>
 </html>
