--- a/index.html
+++ b/index.html
@@ -1,166 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-    	<title>HTML/CSS视频教程_html/css基础教程-慕课网</title>
-        <meta charset = "utf-8">
-        <link href = "index.css" type = "text/css" rel = "stylesheet">
-        <link rel = "Shortcut Icon" href = "image/titleIcon.ico" type = "image/x-icon">
-    	<script src = "index.js"></script>
-    </head>
-    <body>
-    	<header>
-        	<img src = "image/imoocIcon.png" alt = "慕课网图标" id = "imoocIcon"/>
-            <ul class = "options">
-            	<li>首页</li>
-                <li>实战</li>
-                <li>路径</li>
-                <li>猿问</li>
-                <li>手记</li>
-            </ul>
-             <ul class = "icons">
-            	<li class = "scale">
-                	<img src = "image/scale.png" alt = "放大镜" id = "scale"/>
-                </li>
-                <li class = "phone">
-                	<img src = "image/smartphone.png" alt = "手机" id = "smartphone"/>
-                    <img src = "image/downloadlink.png" alt = "手机" id = "downloadlink"/>
-                </li>
-                <li class = "bell"><img src = "image/bell.png" alt = "铃" id = "bell"/></li>
-                <li class = "letter"><img src = "image/letter.png" alt = "信" id = "letter"/></li>
-                <li class = "happyIcon"><img src = "image/happyIcon.png" alt = "用户头像" id = "happyIcon"/></li>
-            </ul>
-        </header>
-        <div id = "mainbody">
-        	<div class = "mainbody_top">
-                <h3>全部课程</h3>
-                <img src = "image/recruit.png" alt = "招募讲师" id = "recruit"/>
-            </div>
-            <div class = "mainbody_middle">
-                <dl class = "direction">
-                	<dt>方向：</dt>
-                    <dd>全部</dd>
-                    <dd class = "selected">前端开发</dd>
-                    <dd>后端开发</dd>
-                    <dd>移动开发</dd>
-                    <dd>数据处理</dd>
-                    <dd>图像处理</dd>
-            	</dl>
-                 <dl class = "classify">
-                	<dt>分类：</dt>
-                    <dd>全部</dd>
-                    <dd class = "selected">HTML/CSS</dd>
-                    <dd>JavaScript</dd>
-                    <dd>Html5</dd>
-                    <dd>CSS3</dd>
-                    <dd>jQuery</dd>
-                    <dd>WebApp</dd>
-                    <dd>Node.js</dd>
-                    <dd>AngularJS</dd>
-                    <dd>Bootstrap</dd>
-                    <dd>前端工具</dd>
-                    <dd>React.JS</dd>
-            	</dl>
-                <dl class = "diffculty">
-                	<dt>难度：</dt>
-                    <dd>全部</dd>
-                    <dd class = "selected">初级</dd>
-                    <dd>中级</dd>
-                    <dd>高级</dd>
-            	</dl>
-            </div>
-            <div class = "mainbody_bottom">
-				<div class = "selectcourse">
-                	<div class = "leftbottom">
-                        <span class = "new">最新</span>
-                        <span class = "hot">最热</span>
-                    </div>
-                    <div class = "rightbottom">
-                        <input type = "checkbox" value = "" id = "selection">
-                        <span class = "text">隐藏已参加课程</span>
-                        <span class = "numberOfPages">1/1</span>
-                        <img src = "image/left.png" alt = "" id = "left"/>
-                        <img src = "image/right.png" alt = "" id = "right"/>
-                    </div>
-                </div>
-                <div class = "courses">
-                	<div class = "course">
-                    	<img src = "image/class.png" alt = "" id = "class1"/>
-                        <p class = "coursename">从psd到html</p>
-                        <p class = "courseDescription">教你把psd设计稿转化成HTML。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
-                    </div>
-                    <div class = "course">
-                    	<img src = "image/class2.png" alt = "" id = "class2"/>
-                        <p class = "coursename">SEO在网页制作中的应用</p>
-                        <p class = "courseDescription">让您快速迈进SEO的门，不容错过！</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;55433人学习</p>
-                    </div>
-                    <div class = "course">
-                    	<img src = "image/class3.png" alt = "" id = "class3"/>
-                        <p class = "coursename">HTML+CSS基础课程</p>
-                        <p class = "courseDescription">8小时带领大家步步深入学习标签的基础知...</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;431543人学习</p>
-                    </div>
-                    <div class = "course">
-                    	<img src = "image/class4.png" alt = "" id = "class4"/>
-                        <p class = "coursename">网页布局基础</p>
-                        <p class = "courseDescription">让你精通CSS中三大定位机制</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;124762人学习</p>
-                    </div>
-                    <div class = "space"></div>
-                	<div class = "course">
-                    	<img src = "image/class5.png" alt = "" id = "class5"/>
-                        <p class = "coursename">impress让你的内容“舞”起来</p>
-                        <p class = "courseDescription">骚年！来试试impress吧！</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;32147人学习</p>
-                    </div>
-                    <div class = "course">
-                    	<img src = "image/class6.png" alt = "" id = "class6"/>
-                        <p class = "coursename">IT菜鸟逆袭指南（江湖篇）</p>
-                        <p class = "courseDescription">屌爆了！码农逆袭有秘诀，看“挨踢（IT）”</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;55064人学习</p>
-                    </div>
-                    <div class = "course">
-                    	<img src = "image/class7.png" alt = "" id = "class7"/>
-                        <p class = "coursename">帝堵抢车位动画制作</p>
-                        <p class = "courseDescription">带领大家做一个抢车动画效果。</p>
-                        <p class = "learn">更新完毕&nbsp;&nbsp;&nbsp;21819人学习</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <div class = "bottom_left">
-                <ul class = "options2">
-                    <li>网站首页</li>
-                    <li>人才招聘</li>
-                    <li>联系我们</li>
-                    <li>慕课云</li>
-                    <li>合作专区</li>
-                    <li>关于我们</li>
-                    <li>讲师招募</li>
-                    <li>意见反馈</li>
-                    <li>友情链接</li>
-                </ul>
-                <p class = "copyright">Copyright&copy;2016&nbsp;imooc.com&nbsp;All&nbsp;Rights&nbsp;Reserved|京ICP备&nbsp;13046642号-2</p>
-            </div>
-            <div class = "bottom_right">
-                <ul class = "icons2">
-                    <li class = "weixin">
-                    	<img src = "image/wechat.png" alt = "wechat" id = "wechat"/>
-                        <img src = "image/bottomlink.png" alt = "" id = "bottomlink"/>
-                    </li>
-                    <li><img src = "image/weibo.png" alt = "weibo" id = "weibo"/></li>
-                    <li><img src = "image/qq.png" alt = "qq" id = "qq"/></li>
-            	</ul>
-            </div>
-        </footer>
-        <aside>
-            <ul>
-                <li><img src = "image/aside1.png" alt = "" id = "aside1"/></li>
-                <li><img src = "image/aside2.png" alt = "" id = "aside2"/></li>
-                <li><img src = "image/aside3.png" alt = "" id = "aside3"/></li>
-            </ul>
-        </aside>
-    </body>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+    <title>Imooc by LuoYiHao</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Imooc</h1>
+        <h2>html,css,js</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/LuoYiHao/Imooc/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/LuoYiHao/Imooc/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/LuoYiHao/Imooc" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    
+  </body>
 </html>
